--- a/bai 4/bai4.css
+++ b/bai 4/bai4.css
@@ -1,23 +1,59 @@
-button{
-    border: 2px teal;
+.menu button{
+    border: 2px solid #83203c;
     border-radius: 25px;
     margin: 10px 75px;
+    padding: 10px 5px;
     box-align: center;
     font-size: 25pt;
     color: white;
     background: none; 
     transition: 0.8s;
-    border bottom: grey;
+    border-bottom: grey;
 }
-.container2{
-    /* position: relative;
-  text-align: center;
-  color: white; */
-  margin-left: 80px;
+.container{
+position: relative;
+  margin-left: 20px;
+}
+.btn { 
+    margin: none;
+    background: black;
+    color: white;
+    border: 2px solid black;
+    border-radius: 25px;
+    font-size: 25px;
+    padding: 10px 10px;
+}
+/* .btn:hover,
+.btn:pulse{ animation: pulse 1s;
+    box-shadow: 0 0 0 2em rgba(#fff,0);}
+    @keyframes pulse {
+        0% { box-shadow: 0 0 0 0 var(--hover); }
+      }
+      pulse: #ef6eae, */
+.btn2{
+    margin: none;
+    background: white;
+    color: black;
+    border: 2px solid white;
+    border-radius: 25px;
+    font-size: 25px;
+    padding: 10px 10px;
+}
+.container .left{
+  position: absolute;
+  top: 90%;
+  left: 15%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  font-size: 10px;
+  padding: 10px 0px;
+  margin-right: none;
+  cursor: pointer;
+  border-radius: 5px;
+ 
 }
 
-
-button:hover {
+.menu button:hover {
     background-color: #83203c;
     overflow: auto;
 }
@@ -31,12 +67,5 @@ body{
     background: #000000;
     color: white;
 }
-.left{
-    float: left;
-    position: relative;
-   /* display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  padding-top: 20px;
-  margin-left: 10px; */
-}
+
+header{ background: #433d3c}
